--- a/style.css
+++ b/style.css
@@ -66,3 +66,23 @@
 	color: #fff;
 	cursor: pointer;
 }
+
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 50px;
+	background-color: #000000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	font-size: 18px;
+	font-weight: 600;
+}
+.creator-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
